tools/poly-ggb/src/parser/generated/g4/PolyhedraParser.cpp

// Generated from g4/Polyhedra.g4 by ANTLR 4.13.2


#include "PolyhedraListener.h"
#include "PolyhedraVisitor.h"

#include "PolyhedraParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PolyhedraParserStaticData final {
  PolyhedraParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PolyhedraParserStaticData(const PolyhedraParserStaticData&) = delete;
  PolyhedraParserStaticData(PolyhedraParserStaticData&&) = delete;
  PolyhedraParserStaticData& operator=(const PolyhedraParserStaticData&) = delete;
  PolyhedraParserStaticData& operator=(PolyhedraParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag polyhedraParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<PolyhedraParserStaticData> polyhedraParserStaticData = nullptr;

void polyhedraParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (polyhedraParserStaticData != nullptr) {
    return;
  }
#else
  assert(polyhedraParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PolyhedraParserStaticData>(
    std::vector<std::string>{
      "polyhedra", "atom", "powerset", "poly", "constr", "linearExpr", "signTerm", 
      "term"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "'('", "')'", "'true'", "'&'", "", "", "", "", "", 
      "", "'*'", "'+'", "'-'", "'<='", "'<'", "'>'", "'>='", "'='", "'0'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "LINE_COMMENT", "COMMENT", "WS", "UNSIGNED_INT", 
      "NEWLINE", "FLOAT", "TIMES", "PLUS", "MINUS", "LE", "LT", "GT", "GE", 
      "EQ", "ZERO", "FLOW", "INV", "VARID", "HEX_COLOR_CODE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  polyhedraParserStaticData = std::move(staticData);
}

}

PolyhedraParser::PolyhedraParser(TokenStream *input) : PolyhedraParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PolyhedraParser::PolyhedraParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PolyhedraParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *polyhedraParserStaticData->atn, polyhedraParserStaticData->decisionToDFA, polyhedraParserStaticData->sharedContextCache, options);
}

PolyhedraParser::~PolyhedraParser() {
  delete _interpreter;
}

const atn::ATN& PolyhedraParser::getATN() const {
  return *polyhedraParserStaticData->atn;
}

std::string PolyhedraParser::getGrammarFileName() const {
  return "Polyhedra.g4";
}

const std::vector<std::string>& PolyhedraParser::getRuleNames() const {
  return polyhedraParserStaticData->ruleNames;
}

const dfa::Vocabulary& PolyhedraParser::getVocabulary() const {
  return polyhedraParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PolyhedraParser::getSerializedATN() const {
  return polyhedraParserStaticData->serializedATN;
}


//----------------- PolyhedraContext ------------------------------------------------------------------

PolyhedraParser::PolyhedraContext::PolyhedraContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PolyhedraParser::AtomContext *> PolyhedraParser::PolyhedraContext::atom() {
  return getRuleContexts<PolyhedraParser::AtomContext>();
}

PolyhedraParser::AtomContext* PolyhedraParser::PolyhedraContext::atom(size_t i) {
  return getRuleContext<PolyhedraParser::AtomContext>(i);
}

std::vector<tree::TerminalNode *> PolyhedraParser::PolyhedraContext::WS() {
  return getTokens(PolyhedraParser::WS);
}

tree::TerminalNode* PolyhedraParser::PolyhedraContext::WS(size_t i) {
  return getToken(PolyhedraParser::WS, i);
}


size_t PolyhedraParser::PolyhedraContext::getRuleIndex() const {
  return PolyhedraParser::RulePolyhedra;
}

void PolyhedraParser::PolyhedraContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPolyhedra(this);
}

void PolyhedraParser::PolyhedraContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPolyhedra(this);
}


std::any PolyhedraParser::PolyhedraContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolyhedraVisitor*>(visitor))
    return parserVisitor->visitPolyhedra(this);
  else
    return visitor->visitChildren(this);
}

PolyhedraParser::PolyhedraContext* PolyhedraParser::polyhedra() {
  PolyhedraContext *_localctx = _tracker.createInstance<PolyhedraContext>(_ctx, getState());
  enterRule(_localctx, 0, PolyhedraParser::RulePolyhedra);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(28);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PolyhedraParser::VARID: {
        enterOuterAlt(_localctx, 1);
        setState(17); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(16);
          atom();
          setState(19); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == PolyhedraParser::VARID);
        break;
      }

      case PolyhedraParser::EOF:
      case PolyhedraParser::WS: {
        enterOuterAlt(_localctx, 2);
        setState(24);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == PolyhedraParser::WS) {
          setState(21);
          match(PolyhedraParser::WS);
          setState(26);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
         notifyErrorListeners("Empty input!"); 
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtomContext ------------------------------------------------------------------

PolyhedraParser::AtomContext::AtomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PolyhedraParser::AtomContext::getRuleIndex() const {
  return PolyhedraParser::RuleAtom;
}

void PolyhedraParser::AtomContext::copyFrom(AtomContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AtomEmptyContext ------------------------------------------------------------------

tree::TerminalNode* PolyhedraParser::AtomEmptyContext::VARID() {
  return getToken(PolyhedraParser::VARID, 0);
}

tree::TerminalNode* PolyhedraParser::AtomEmptyContext::HEX_COLOR_CODE() {
  return getToken(PolyhedraParser::HEX_COLOR_CODE, 0);
}

PolyhedraParser::AtomEmptyContext::AtomEmptyContext(AtomContext *ctx) { copyFrom(ctx); }

void PolyhedraParser::AtomEmptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtomEmpty(this);
}
void PolyhedraParser::AtomEmptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtomEmpty(this);
}

std::any PolyhedraParser::AtomEmptyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolyhedraVisitor*>(visitor))
    return parserVisitor->visitAtomEmpty(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AtomPolyContext ------------------------------------------------------------------

tree::TerminalNode* PolyhedraParser::AtomPolyContext::VARID() {
  return getToken(PolyhedraParser::VARID, 0);
}

PolyhedraParser::PolyContext* PolyhedraParser::AtomPolyContext::poly() {
  return getRuleContext<PolyhedraParser::PolyContext>(0);
}

tree::TerminalNode* PolyhedraParser::AtomPolyContext::HEX_COLOR_CODE() {
  return getToken(PolyhedraParser::HEX_COLOR_CODE, 0);
}

PolyhedraParser::AtomPolyContext::AtomPolyContext(AtomContext *ctx) { copyFrom(ctx); }

void PolyhedraParser::AtomPolyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtomPoly(this);
}
void PolyhedraParser::AtomPolyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtomPoly(this);
}

std::any PolyhedraParser::AtomPolyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolyhedraVisitor*>(visitor))
    return parserVisitor->visitAtomPoly(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AtomErrorContext ------------------------------------------------------------------

tree::TerminalNode* PolyhedraParser::AtomErrorContext::VARID() {
  return getToken(PolyhedraParser::VARID, 0);
}

std::vector<PolyhedraParser::PolyContext *> PolyhedraParser::AtomErrorContext::poly() {
  return getRuleContexts<PolyhedraParser::PolyContext>();
}

PolyhedraParser::PolyContext* PolyhedraParser::AtomErrorContext::poly(size_t i) {
  return getRuleContext<PolyhedraParser::PolyContext>(i);
}

PolyhedraParser::AtomErrorContext::AtomErrorContext(AtomContext *ctx) { copyFrom(ctx); }

void PolyhedraParser::AtomErrorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtomError(this);
}
void PolyhedraParser::AtomErrorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtomError(this);
}

std::any PolyhedraParser::AtomErrorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolyhedraVisitor*>(visitor))
    return parserVisitor->visitAtomError(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AtomPowersetContext ------------------------------------------------------------------

tree::TerminalNode* PolyhedraParser::AtomPowersetContext::VARID() {
  return getToken(PolyhedraParser::VARID, 0);
}

PolyhedraParser::PowersetContext* PolyhedraParser::AtomPowersetContext::powerset() {
  return getRuleContext<PolyhedraParser::PowersetContext>(0);
}

tree::TerminalNode* PolyhedraParser::AtomPowersetContext::HEX_COLOR_CODE() {
  return getToken(PolyhedraParser::HEX_COLOR_CODE, 0);
}

PolyhedraParser::AtomPowersetContext::AtomPowersetContext(AtomContext *ctx) { copyFrom(ctx); }

void PolyhedraParser::AtomPowersetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtomPowerset(this);
}
void PolyhedraParser::AtomPowersetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtomPowerset(this);
}

std::any PolyhedraParser::AtomPowersetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolyhedraVisitor*>(visitor))
    return parserVisitor->visitAtomPowerset(this);
  else
    return visitor->visitChildren(this);
}
PolyhedraParser::AtomContext* PolyhedraParser::atom() {
  AtomContext *_localctx = _tracker.createInstance<AtomContext>(_ctx, getState());
  enterRule(_localctx, 2, PolyhedraParser::RuleAtom);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(86);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<PolyhedraParser::AtomPowersetContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(30);
      match(PolyhedraParser::VARID);
      setState(31);
      powerset();
      setState(33);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == PolyhedraParser::HEX_COLOR_CODE) {
        setState(32);
        match(PolyhedraParser::HEX_COLOR_CODE);
      }
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<PolyhedraParser::AtomEmptyContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(35);
      match(PolyhedraParser::VARID);
      setState(36);
      match(PolyhedraParser::T__0);
      setState(37);
      match(PolyhedraParser::T__1);
      setState(39);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == PolyhedraParser::HEX_COLOR_CODE) {
        setState(38);
        match(PolyhedraParser::HEX_COLOR_CODE);
      }
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<PolyhedraParser::AtomPolyContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(41);
      match(PolyhedraParser::VARID);
      setState(42);
      poly();
      setState(44);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == PolyhedraParser::HEX_COLOR_CODE) {
        setState(43);
        match(PolyhedraParser::HEX_COLOR_CODE);
      }
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<PolyhedraParser::AtomErrorContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(46);
      match(PolyhedraParser::VARID);
      setState(47);
      match(PolyhedraParser::T__0);
      setState(48);
      match(PolyhedraParser::T__1);
      setState(50); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(49);
        match(PolyhedraParser::T__1);
        setState(52); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == PolyhedraParser::T__1);
       notifyErrorListeners("Too many parentheses"); 
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<PolyhedraParser::AtomErrorContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(55);
      match(PolyhedraParser::VARID);
      setState(57); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(56);
                match(PolyhedraParser::T__0);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(59); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      setState(61);
      match(PolyhedraParser::T__0);
      setState(62);
      match(PolyhedraParser::T__1);
       notifyErrorListeners("Too many parentheses"); 
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<PolyhedraParser::AtomErrorContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(64);
      match(PolyhedraParser::VARID);
      setState(66); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(65);
                match(PolyhedraParser::T__0);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(68); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      setState(70);
      match(PolyhedraParser::T__0);
      setState(71);
      match(PolyhedraParser::T__1);
      setState(73); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(72);
        match(PolyhedraParser::T__1);
        setState(75); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == PolyhedraParser::T__1);
       notifyErrorListeners("Too many parentheses"); 
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<PolyhedraParser::AtomErrorContext>(_localctx);
      enterOuterAlt(_localctx, 7);
      setState(78);
      match(PolyhedraParser::VARID);
      setState(80); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(79);
                poly();
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(82); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
       notifyErrorListeners("Only one polyhedron is allowed! If you want a set of polyhedra, use a powerset."); 
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PowersetContext ------------------------------------------------------------------

PolyhedraParser::PowersetContext::PowersetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PolyhedraParser::PowersetContext::getRuleIndex() const {
  return PolyhedraParser::RulePowerset;
}

void PolyhedraParser::PowersetContext::copyFrom(PowersetContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PowersetTrueContext ------------------------------------------------------------------

PolyhedraParser::PowersetTrueContext::PowersetTrueContext(PowersetContext *ctx) { copyFrom(ctx); }

void PolyhedraParser::PowersetTrueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPowersetTrue(this);
}
void PolyhedraParser::PowersetTrueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPowersetTrue(this);
}

std::any PolyhedraParser::PowersetTrueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolyhedraVisitor*>(visitor))
    return parserVisitor->visitPowersetTrue(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PowersetEmptyOrNotEmptyContext ------------------------------------------------------------------

std::vector<PolyhedraParser::PolyContext *> PolyhedraParser::PowersetEmptyOrNotEmptyContext::poly() {
  return getRuleContexts<PolyhedraParser::PolyContext>();
}

PolyhedraParser::PolyContext* PolyhedraParser::PowersetEmptyOrNotEmptyContext::poly(size_t i) {
  return getRuleContext<PolyhedraParser::PolyContext>(i);
}

PolyhedraParser::PowersetEmptyOrNotEmptyContext::PowersetEmptyOrNotEmptyContext(PowersetContext *ctx) { copyFrom(ctx); }

void PolyhedraParser::PowersetEmptyOrNotEmptyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPowersetEmptyOrNotEmpty(this);
}
void PolyhedraParser::PowersetEmptyOrNotEmptyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPowersetEmptyOrNotEmpty(this);
}

std::any PolyhedraParser::PowersetEmptyOrNotEmptyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolyhedraVisitor*>(visitor))
    return parserVisitor->visitPowersetEmptyOrNotEmpty(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PowersetErrorContext ------------------------------------------------------------------

std::vector<PolyhedraParser::PolyContext *> PolyhedraParser::PowersetErrorContext::poly() {
  return getRuleContexts<PolyhedraParser::PolyContext>();
}

PolyhedraParser::PolyContext* PolyhedraParser::PowersetErrorContext::poly(size_t i) {
  return getRuleContext<PolyhedraParser::PolyContext>(i);
}

PolyhedraParser::PowersetErrorContext::PowersetErrorContext(PowersetContext *ctx) { copyFrom(ctx); }

void PolyhedraParser::PowersetErrorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPowersetError(this);
}
void PolyhedraParser::PowersetErrorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PolyhedraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPowersetError(this);
}

std::any PolyhedraParser::PowersetErrorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolyhedraVisitor*>(visitor))
    return parserVisitor->visitPowersetError(this);
  else
    return visitor->visitChildren(this);
}
PolyhedraParser::PowersetContext* PolyhedraParser::powerset() {
  PowersetContext *_localctx = _tracker.createInstance<PowersetContext>(_ctx, getState());
  enterRule(_localctx, 4, PolyhedraParser::RulePowerset);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(166);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 23, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<PolyhedraParser::PowersetEmptyOrNotEmptyContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(88);
      match(PolyhedraParser::T__2);
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 18863106) != 0)) {
        setState(89);
        poly();
        setState(94);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(95);
      match(PolyhedraParser::T__3);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<PolyhedraParser::PowersetTrueContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(96);
      match(PolyhedraParser::T__2);
      setState(97);
      match(PolyhedraParser::T__4);
      setState(98);
      match(PolyhedraParser::T__3);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<PolyhedraParser::PowersetErrorContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(99);
      match(PolyhedraParser::T__2);
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 18863106) != 0)) {
        setState(100);
        poly();
        setState(105);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(106);
      match(PolyhedraParser::T__3);
      setState(108); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(107);
        match(PolyhedraParser::T__3);
        setState(110); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == PolyhedraParser::T__3);
       notifyErrorListeners("Too many parentheses"); 
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<PolyhedraParser::PowersetErrorContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(114); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(113);
                match(PolyhedraParser::T__2);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(116); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      setState(118);
      match(PolyhedraParser::T__2);
      setState(122);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 18863106) != 0)) {
        setState(119);
        poly();
        setState(124);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(125);
      match(PolyhedraParser::T__3);
      setState(127); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(126);
        match(PolyhedraParser::T__3);
        setState(129); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == PolyhedraParser::T__3);
       notifyErrorListeners("Too many parentheses"); 
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<PolyhedraParser::PowersetErrorContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(133); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(132);
                match(PolyhedraParser::T__2);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(135); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      setState(137);
      match(PolyhedraParser::T__2);
      setState(141);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 18863106) != 0)) {
        setState(138);
        poly();
        setState(143);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(145); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(144);
        match(PolyhedraParser::T__3);
        setState(147); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == PolyhedraParser::T__3);
       notifyErrorListeners("Too many parentheses"); 
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<PolyhedraParser::PowersetErrorContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(150);
      match(PolyhedraParser::T__2);
      setState(154);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 21, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(151);
          poly(); 
        }
        setState(156);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 21, _ctx);
      }
       notifyErrorListeners("Missing closing ')'");  
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<PolyhedraParser::PowersetErrorContext>(_localctx);
      enterOuterAlt(_localctx, 7);
      setState(161);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 18863106) != 0)) {
        setState(158);
        poly();
        setState(163);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(164);
      match(PolyhedraParser::T__3);
       notifyErrorListeners("Missing opening '('");  
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
